kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizza-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pizza-frontend
  template:
    metadata:
      labels:
        app: pizza-frontend
    spec:
      containers:
      - name: pizza-frontend
        image: nathprz/pizza-frontend:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pizza-frontend
spec:
  selector:
    app: pizza-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
